--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tauri": "^0.15.0",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3"
 	}
