--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "booksite",
+	"name": "wallflower",
 	"version": "0.1.0",
 	"description": "",
 	"type": "module",
@@ -10,7 +10,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
-	"license": "MIT",
+	"license": "All rights reserved",
 	"dependencies": {
 		"firebase": "^11.2.0"
 	},
@@ -18,9 +18,9 @@
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tauri-apps/cli": "^2.8.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tauri": "^0.15.0",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3"
 	}
